Correction des bogues dans Util